2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_util_get_dm_node_linear_info): Fix memory leak.
	* grub-core/disk/cryptodisk.c (cryptodisk_cleanup): Disable for
	now to avoid double free.
	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_dev): Rename to
	hostdisk.
	* include/grub/disk.h (grub_disk_dev_id): New id HOSTDISK.
	* util/grub-probe.c (escape_of_path): Always return a new copy.
	(print_full_name): Escape path.
	(probe): Don't call grub_util_devname_to_ofpath on NULL.
	Fix hints on abstractions.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device):
	Don't add "root" line if no compatibility hont is available.
	Suggested by: Seth Goldberg.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/ata.h (grub_ata): Add a new element maxbuffer.
	* grub-core/disk/ata.c (grub_ata_readwrite): Limit to ata->maxbuffer.
	* grub-core/disk/pata.c (grub_pata_open): Set ata->maxbuffer.
	* grub-core/disk/ahci.c (grub_ahci_open): Likewise.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/zfs/dnode.h (DN_MIN_INDBLKSHIFT): Removed.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-pe2elf.c (ehdr): Make static.
	(shdr): Likewise.
	(num_sections): Likewise.
	(offset): Likewise.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	Eliminate ofpath limits and possible overflows.

	* util/ieee1275/ofpath.c (grub_util_info) [STANDALONE]: New function.
	(OF_PATH_MAX): Removed.
	(MAX_DISK_CAT): New const.
	(find_obppath): Use allocated rather than preallocated buffer.
	Return result. Argument of_path removed. All users updated.
	Add missing fdstat.
	(xrealpath): New function.
	(block_device_get_sysfs_path_and_link): Remove sysfs argument.
	Allocate rather than use preallocated buffer. All users updated.
	(__of_path_common): Use allocated rather than preallocatecd buffer.
	Return result. Argument of_path removed. All users updated.